@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Solved the issue of serializing large SES collections, over the HDF5 limit
   * The loss maps and curves XML exporters now export the coordinates
     of the assets, not the coordinates of the closest hazard site
   * Stored the job.ini parameters into a table in the datastore
